Changes in detail.html

--- a/djangotutorial/polls/templates/polls/detail.html
+++ b/djangotutorial/polls/templates/polls/detail.html
@@ -6,11 +6,12 @@
         <title>detail</title>
     </head>
     <body>
-        <h1>{{question.question_text}}</h1>
+        <!--<h1>{{question.question_text}}</h1>
         <ol type="a">
             {% for choice in question.choice_set.all %}
                 <li>{{choice.choice_text}}</li>
             {% endfor %}
-        </ol>
+        </ol>-->
+        
     </body>
 </html>
